# foodify

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 07527b634308_add_ingridients.py  bd1affdbac67_init.py  dc59a64b55bb_add_ingridients.py  f41d12db65bf_init.py
foodify/: __main__.py  chatbot.py  chatgpt_recipient_maker.py  config.py
foodify/db/: __init__.py  base.py  favorite_ingredients.py  ingredients.py  unloved_ingredients.py  user.py  users.py
foodify/models/: base.py  ingredient.py  recipient.py  user.py
foodify/repositories/: base.py  ingredients.py  users.py
foodify/services/: foody_service.py  ingredients_service.py  users_service.py
